feat: Product Card, HorizontalBannerList, and some changes in types & navigators.
This commit includes new components such as ProductCard, HorizontalBannerList and more.

--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
-    "ios": "expo start --ios"
+    "ios": "expo start --ios",
+    "lint": "eslint ."
   },
   "dependencies": {
-    "@react-native-community/netinfo": "11.1.0",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
