--- a/package.json
+++ b/package.json
@@ -4,8 +4,13 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start-no-cache": "expo start -c",
+    "android": "yarn expo run:android",
+    "ios": "yarn expo run:ios",
+    "prebuild": "npx expo prebuild",
+    "prebuild-clean": "npx expo prebuild --clean",
+    "xcode": "cd ios && open shopzy.xcworkspace",
+    "android-studio": "open -a /Applications/Android\\ Studio.app ./android/",
     "lint": "eslint ."
   },
   "dependencies": {
@@ -14,12 +19,13 @@
     "@react-navigation/native-stack": "^6.9.17",
     "expo": "^49.0.0",
     "expo-font": "~11.4.0",
-    "expo-status-bar": "~1.7.1",
+    "expo-splash-screen": "~0.20.5",
+    "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
-    "react-native": "0.72.7",
-    "react-native-safe-area-context": "4.7.4",
-    "react-native-screens": "~3.27.0",
-    "react-native-svg": "14.0.0",
+    "react-native": "0.72.6",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
+    "react-native-svg": "13.9.0",
     "zustand": "^4.4.6"
   },
   "devDependencies": {
