--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-svg": "13.9.0",
+    "react-native-toast-message": "^2.1.7",
     "zustand": "^4.4.6"
   },
   "devDependencies": {
